--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,12 @@
       </dependency>
       <dependency>
         <groupId>org.exoplatform.social</groupId>
+        <artifactId>social-search-portlet</artifactId>
+        <version>${project.version}</version>
+        <type>pom</type>
+      </dependency>
+      <dependency>
+        <groupId>org.exoplatform.social</groupId>
         <artifactId>social-webapp-portlet</artifactId>
         <version>${project.version}</version>
         <type>war</type>
