--- a/webapp/portlet/pom.xml
+++ b/webapp/portlet/pom.xml
@@ -186,6 +186,7 @@
         <executions>
           <execution>
             <id>install node and npm</id>
+            <phase>compile</phase>
             <goals>
               <goal>install-node-and-npm</goal>
             </goals>
@@ -196,6 +197,7 @@
           </execution>
           <execution>
             <id>npm install</id>
+            <phase>compile</phase>
             <goals>
               <goal>npm</goal>
             </goals>
@@ -205,6 +207,7 @@
           </execution>
           <execution>
             <id>npm run test</id>
+            <phase>test</phase>
             <goals>
               <goal>npm</goal>
             </goals>
@@ -214,6 +217,7 @@
           </execution>
           <execution>
             <id>npm run build</id>
+            <phase>compile</phase>
             <goals>
               <goal>npm</goal>
             </goals>
