--- a/extension/war/pom.xml
+++ b/extension/war/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <artifactId>social-extension</artifactId>
     <groupId>org.exoplatform.social</groupId>
-    <version>6.1.x-SNAPSHOT</version>
+    <version>6.1.x-tasks-SNAPSHOT</version>
   </parent>
   <groupId>org.exoplatform.social</groupId>
   <artifactId>social-extension-war</artifactId>
