--- a/extras/pom.xml
+++ b/extras/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <artifactId>social</artifactId>
     <groupId>org.exoplatform.social</groupId>
-    <version>6.1.x-SNAPSHOT</version>
+    <version>6.1.x-tasks-SNAPSHOT</version>
   </parent>
   <artifactId>social-extras</artifactId>
   <packaging>pom</packaging>
