--- a/extras/widget/rest/pom.xml
+++ b/extras/widget/rest/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <artifactId>social-extras-widget</artifactId>
     <groupId>org.exoplatform.social</groupId>
-    <version>6.1.x-SNAPSHOT</version>
+    <version>6.1.x-tasks-SNAPSHOT</version>
   </parent>
   <groupId>org.exoplatform.social</groupId>
   <artifactId>social-extras-widget-rest</artifactId>
